# mandelbrot-frontend-rs

./: .gitignore  Cargo.toml  Makefile  README.md  Trunk.toml  build.rs  index.html  package-lock.json  package.json  tailwind.config.js
.cargo/: config.toml
assets/: style.scss  tailwind.css
resources/: MandelbrotNFT.json  Wrapped1155.json  Wrapped1155Factory.json
src/: chain.rs  color.rs  context.rs  main.rs  state.rs  util.rs
src/components/: about.rs  account.rs  app.rs  auction.rs  balance.rs  bids.rs  blockchain.rs  context.rs  controller.rs  error_handler.rs  explorer.rs  frame_control.rs  guide.rs  mandelbrot.rs  mod.rs  state.rs
src/components/account/: balance.rs  mod.rs
src/components/explorer/: auction.rs  bids.rs  gradient.rs  info.rs  mod.rs  visuals.rs
src/components/explorer/gradient/: mod.rs  step.rs  wave.rs
src/components/inventory/: bids.rs  mod.rs  tokens.rs
src/components/primitive/: mod.rs  slider.rs
src/components/sales/: mod.rs
src/components/tabs/: about.rs  mod.rs
src/components/tabs/auction/: bids.rs  form.rs  mod.rs
src/components/tabs/explorer/: auction.rs  mod.rs  visuals.rs
src/components/tabs/explorer/gradient/: step.rs  wave.rs
src/components/tabs/inventory/: bids.rs  mod.rs  tokens.rs
src/components/tabs/sales/: mod.rs
src/evm/: contracts.rs  types.rs
