[package]
name = "mandelbrot-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
console_log = "1.0.0"
ethabi = "18.0.0"
eyre = "0.6.12"
futures = "0.3.30"
jsonrpc-core = "18.0.0"
leptonic = "0.5.0"
leptos = { version = "0.6.12", features = ["csr"] }
leptos-ethereum-provider = { git = "https://github.com/platonfloria/leptos-ethereum-provider.git", version = "0.1.0" }
leptos_router = { version = "0.6.12", features = ["csr"] }
log = "0.4.21"
mandelbrot-explorer = { version = "0.1.0", path = "mandelbrot-explorer-rs" }
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = ["Screen", "Window"] }
web3 = { git = "https://github.com/platonfloria/rust-web3.git", branch="feature/transport-either-to-support-wasm", version = "0.20.0", default-features = false, features = ["eip-1193"] }

[build-dependencies]
leptonic-theme = "0.5.0"
leptos-tiptap-build = "0.2.6"
