[package]
name = "mandelbrot-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.88"
base64 = "0.22.1"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
ethabi = "18.0.0"
eyre = "0.6.12"
futures = "0.3.31"
itertools = "0.14.0"
jsonrpc-core = "18.0.0"
leptos = { version = "0.8.2", features = ["csr"] }
leptos-ethereum-provider = { git = "https://github.com/platonfloria/leptos-ethereum-provider.git", version = "0.1.0" }
leptos-use = "0.16.0-beta2"
leptos_router = { version = "0.8.2" }
log = "0.4.27"
mandelbrot-explorer = { version = "0.1.0", path = "mandelbrot-explorer-rs" }
reactive_stores = "0.2.2"
send_wrapper = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
url = "2.5.4"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["Screen", "Window", "CanvasRenderingContext2d"] }
web3 = { git = "https://github.com/platonfloria/rust-web3.git", branch="feature/transport-either-to-support-wasm", version = "0.20.0", default-features = false, features = ["eip-1193"] }

[profile.dev]
debug = true
