[package]
name = "mandelbrot-frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
ethabi = "18.0.0"
eyre = "0.6.12"
futures = "0.3.31"
itertools = "0.14.0"
jsonrpc-core = "18.0.0"
leptos = { version = "0.8.15", features = ["csr"] }
leptos-ethereum-provider = { git = "https://github.com/platonfloria/leptos-ethereum-provider.git", version = "0.1.0" }
leptos-use = "0.17.0"
leptos_router = { version = "0.8.11" }
log = "0.4.29"
mandelbrot-explorer = { version = "0.1.0", path = "mandelbrot-explorer-rs" }
reactive_stores = "0.3.1"
send_wrapper = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
url = "2.5.8"
wasm-bindgen = "0.2.106"
web-sys = { version = "0.3.83", features = ["Screen", "Window", "CanvasRenderingContext2d"] }
web3 = { git = "https://github.com/platonfloria/rust-web3.git", branch="feature/transport-either-to-support-wasm", version = "0.20.0", default-features = false, features = ["eip-1193"] }

[build-dependencies]
dotenvy = "0.15.7"

[profile.dev]
debug = true
